--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -34,6 +34,16 @@ input{
     border: 1px solid rgba(255, 255, 255, 0.29);
 }
 
+input:focus{
+    background: rgba(23, 46, 97, 0.14);
+    border-radius: 8px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.4px);
+    -webkit-backdrop-filter: blur(5.4px);
+    border: 1px solid rgba(255, 255, 255, 0.29);
+    color: white;
+}
+
 ::placeholder { 
     color: white;
     opacity: 1;
