--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,7 +15,7 @@
                                 </svg>
                             </div>
                         </div>
-                        <input type="email" class="form-control" id="Email" placeholder="Enter email">
+                        <input type="email" class="form-control" id="Email" placeholder="Email">
                     </div>
                     <div class="input-group mb-2">
                         <div class="input-group-prepend">
