--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,3 +1,71 @@
-<div class="container">
-    <p>home works!</p>
-</div>
+  <div class="container">
+    <div class="write-post">
+      <input type="text" class="form-control" id="post" placeholder="What's on your mind?">
+    </div>
+      <div class="stories">
+          <div class="card mine text-white">
+                  <div class="card-img"></div>
+                    <div class="card-img-overlay center-dot">
+                      <span class="dot">
+                      <h2 style="color:#2e4b88;">+</h2>
+                      </span>
+                      <h6 class="card-title" style="margin-top:8.5rem;"></h6>
+                    </div>
+                </div>
+          <div class="card bg-dark text-white others">
+              <img src="../../../assets/images/s1.JPG" class="card-img" alt="...">
+              <div class="card-img-overlay grad">
+                <h6 class="card-title" style="margin-top:8.5rem;">habijabiongabonga</h6>
+              </div>
+            </div>
+            <div class="card bg-dark text-white others">
+              <img src="../../../assets/images/s2.JPG" class="card-img" alt="...">
+              <div class="card-img-overlay grad">
+                <h6 class="card-title" style="margin-top:8.5rem;">quakka</h6>
+              </div>
+            </div>
+            <div class="card bg-dark text-white others">
+              <img src="../../../assets/images/s3.png" class="card-img" alt="...">
+              <div class="card-img-overlay grad">
+                <h6 class="card-title" style="margin-top:8.5rem;">Tasmia Zerin</h6>
+              </div>
+            </div>
+            <div class="card bg-dark text-white others">
+              <img src="../../../assets/images/s4.png" class="card-img" alt="...">
+              <div class="card-img-overlay grad">
+                <h6 class="card-title" style="margin-top:8.5rem;">Sad Kiddo</h6>
+              </div>
+            </div>
+            <div class="card bg-dark text-white others">
+              <img src="../../../assets/images/s5.png" class="card-img" alt="...">
+              <div class="card-img-overlay grad">
+                <h6 class="card-title" style="margin-top:8.5rem;">Pippo</h6>
+              </div>
+            </div>
+            <div class="next-arrow">
+              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
+              <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
+            </svg>
+            </div>
+      </div>
+      <div class="posts">
+        <div class="card text-white single-post">
+          <div class="card-body">
+            <div class="propic-name">
+              <img src="../../../assets/images/s5.png" class="pro-pic" alt="...">
+              <h5 class="card-title name">Pippo</h5>
+            </div>
+            <p class="card-text" style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus numquam sequi esse tenetur veritatis deserunt unde laborum facere? Ducimus, corrupti?</p>
+          </div>
+        </div>
+        <div class="card text-white single-post">
+          <div class="card-body">
+            <div class="propic-name">
+              <img src="../../../assets/images/s6.png" class="pro-pic" alt="...">
+              <h5 class="card-title name">Sad Kid</h5>
+            </div>
+            <p class="card-text" style="color: white;">Lorem ipsum dolor sit amet consectetur adipisicing elit. In temporibus voluptatem ducimus sequi cumque recusandae optio dolor? Vitae maiores iste voluptate delectus nesciunt, distinctio porro ducimus vero numquam voluptates beatae sequi illum harum blanditiis quia pariatur dolor aliquid rerum facere ea consectetur quas amet sed cupiditate? Vel quidem itaque libero.</p>
+          </div>
+        </div>
+      </div>
+  </div>
