--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -50,6 +50,19 @@
                         </div> 
                         <input type="text" class="form-control" placeholder="Date of Birth" [(ngModel)]="dob" formControlName="dob" onfocus="(this.type='date')" onblur="(this.type='text')">
                     </div>
+                    <div class="input-group mb-2">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-image-fill" viewBox="0 0 16 16">
+                                    <path d="M.002 3a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2h-12a2 2 0 0 1-2-2V3zm1 9v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V9.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12zm5-6.5a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0z"/>
+                                  </svg>
+                            </div>
+                        </div> 
+                        <label for="file-upload" class="custom-file-upload">
+                            Upload Profile Picture
+                        </label>
+                        <input id="file-upload" type="file"/>
+                    </div>
                     <button type="submit" class="btn" style="background-color: #3b5998; color: white;" (click)="registerUser()">Create Account</button>
                     <p class="card-text">Already have an account? <a [routerLink]="['']" class="card-link">Log In</a></p>
                 </form>
