--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-4">
-            <img src="../../assets/images/miniFB.svg" style="height: 10rem; width: auto">
+            <img src="../../assets/images/miniFacebook.svg" style="height: 10rem; width: auto">
         </div>
         <div class="col-2"></div>
         <div class="col-6">
