--- a/frontend/src/app/components/register/register.component.css
+++ b/frontend/src/app/components/register/register.component.css
@@ -2,11 +2,9 @@
     background-color: #3b5998;
 }
 
-img{
-    margin-top: 65%;
-}
 h1{
     margin-top: 65%;
+    margin-left: 20%;
     margin-bottom: 40px;
     font-family: 'Poppins';
     font-size: 70px;
@@ -14,6 +12,7 @@ h1{
 }
 
 h3{
+    margin-left: 20%;
     color: white;
 }
 
