fixed reload issue

--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
   <div class="container">
     <div class="write-post">
-      <input type="text" class="form-control" id="post" placeholder="What's on your mind?">
+      <input type="text" class="form-control" id="post" placeholder="What's on your mind?" (click)="goToPost()">
     </div>
       <div class="stories">
           <div class="card mine text-white">
