--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -57,7 +57,7 @@
           <div class="card text-white single-post">
           <div class="card-body">
             <div class="propic-name">
-              <img src="../../../assets/images/s5.png" class="pro-pic" alt="...">
+              <img src="../../../assets/images/fbRound.jpg" class="pro-pic" alt="...">
               <div class="nameTime">
                 <h5 class="card-title name">{{status.name}}</h5>
                 <h6 class="time" style="font-size: 13px; color: #c2c2c2;">{{status.time}}</h6>
