--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -7,6 +7,7 @@
         <div class="col-6">
             <div class="card">
                 <form action="#" class="login-form" [formGroup] = "loginForm">
+                    <h6 [ngClass]="{error: hasError}">{{emailpassError}}</h6>
                     <div class="input-group mb-2">
                         <div class="input-group-prepend">
                             <div class="input-group-text">
@@ -25,9 +26,10 @@
                                 </svg>
                             </div>
                         </div> 
-                        <input type="password" [type]="show ? 'text' : 'password'" class="form-control" id="password" placeholder="Password" [(ngModel)]="password" formControlName="password">
+                        <input type="password" [type]="show ? 'text' : 'password'" class="form-control" id="password" placeholder="Password" [(ngModel)]="password" formControlName="password" >
                     </div>
-                    <button type="submit" class="btn" style="background-color: #3b5998; color: white;" (click)="loginUser()">Login</button>
+                    
+                    <button type="submit" class="btn" (click)="loginUser()">Login</button>
                     <p class="card-text">Don't have an account? <a [routerLink]="['register']" class="card-link">Create One</a></p>
                 </form>
             </div>
