--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -1,11 +1,11 @@
 .container{
     width: auto;
-    margin: 10px;
+    margin: 10px auto;
     align-items: center;
 }
 
 .stories{
-    margin-left: 28%;
+    margin-left: 25%;
     display:inline-flex;
 }
 
@@ -60,6 +60,7 @@ h6{
     width: 60px;
     background-color: rgb(255, 255, 255);
     border-radius: 50%;
+    border: transparent;
     display: inline-block;
     justify-content: center;
     position: absolute;
@@ -82,12 +83,12 @@ h2{
     width: 80rem;
     height: 5rem;
     margin-top: 50px;
-    margin-left: 120px;
+    margin-left: 80px;
     text-align: center;
     display: inline-flex;
 }
 
-input{
+#post{
     /* margin-top: 5%; */
     margin-left:auto;
     margin-right:auto;
@@ -103,7 +104,7 @@ input{
     color: white;
 }
 
-input:focus{
+#post:focus{
     background: rgba(255, 255, 255, 0.14);
     border-radius: 30px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -123,7 +124,7 @@ input:focus{
 }
 
 .posts{
-    padding: 25px 28%;
+    padding: 25px 25%;
 }
 
 .single-post{
@@ -193,4 +194,12 @@ input:focus{
     height: 50px;
     width: auto;
     float: left;
+}
+
+
+#storyUpload{
+    display: block;
+    visibility: hidden;
+    height: 0;
+    width: 0;
 }
