--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -18,6 +18,12 @@
           </div>
         </div>
         <div class="card bg-dark text-white others">
+          <img [src]="uploadedImage" class="card-img" alt="...">
+          <div class="card-img-overlay grad">
+            <h6 class="card-title" style="margin-top:8.5rem;">New Upload</h6>
+          </div>
+        </div>
+        <div class="card bg-dark text-white others">
           <img src="../../../assets/images/s1.JPG" class="card-img" alt="...">
           <div class="card-img-overlay grad">
             <h6 class="card-title" style="margin-top:8.5rem;">habijabiongabonga</h6>
