--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -10,7 +10,7 @@
         <div class="card mine text-white">
           <div class="card-img"></div>
           <div class="card-img-overlay center-dot">
-            <input type="file" id="storyUpload" accept="image/*" (change)="onFileSelected($event)" #file>
+            <input type="file" id="storyUpload" name="files" accept="image/*" (change)="upload($event)" #file>
             <button class="dot" (click)="file.click()">
               <h2 style="color:#2e4b88;">+</h2>
             </button>
@@ -18,7 +18,7 @@
           </div>
         </div>
         <div class="card bg-dark text-white others">
-          <img [src]="uploadedImage" class="card-img" alt="...">
+          <img src="http://127.0.0.1:9000/minifb/69eb9fdd-e83b-48f4-9e6c-ca5bd2c1d43d" class="card-img" alt="...">
           <div class="card-img-overlay grad">
             <h6 class="card-title" style="margin-top:8.5rem;">New Upload</h6>
           </div>
