--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,83 +1,60 @@
-    <div class="white-head">
-      <img src="../../../assets/images/miniFB_transparent.svg" id="fbLogo">
-      <img src="../../../assets/images/s6.png" class="propic-self">
+<div class="white-head">
+  <img src="../../../assets/images/miniFB_transparent.svg" id="fbLogo">
+  <img src="../../../assets/images/s6.png" class="propic-self">
+</div>
+<div class="container">
+  <div class="write-post">
+    <input type="text" class="form-control" id="post" placeholder="{{placeholderText}}" (click)="goToPost()">
+  </div>
+  <div class="stories">
+    <div class="card mine text-white">
+      <div class="card-img"></div>
+      <div class="card-img-overlay center-dot">
+        <input type="file" id="storyUpload" name="files" accept="image/*" (change)="upload($event)" #file>
+        <button class="dot" (click)="file.click()">
+          <h2 style="color:#2e4b88;">+</h2>
+        </button>
+        <h6 class="card-title" style="margin-top:8.5rem;"></h6>
+      </div>
     </div>
-    <div class="container">
-      <div class="write-post">
-        <input type="text" class="form-control" id="post" placeholder="{{placeholderText}}" (click)="goToPost()">
-      </div>
-      <div class="stories">
-        <div class="card mine text-white">
-          <div class="card-img"></div>
-          <div class="card-img-overlay center-dot">
-            <input type="file" id="storyUpload" name="files" accept="image/*" (change)="upload($event)" #file>
-            <button class="dot" (click)="file.click()">
-              <h2 style="color:#2e4b88;">+</h2>
-            </button>
-            <h6 class="card-title" style="margin-top:8.5rem;"></h6>
-          </div>
-        </div>
-        <div class="card bg-dark text-white others">
-          <img src="http://127.0.0.1:9000/minifb/69eb9fdd-e83b-48f4-9e6c-ca5bd2c1d43d" class="card-img" alt="...">
-          <div class="card-img-overlay grad">
-            <h6 class="card-title" style="margin-top:8.5rem;">New Upload</h6>
-          </div>
-        </div>
-        <div class="card bg-dark text-white others">
-          <img src="../../../assets/images/s1.JPG" class="card-img" alt="...">
-          <div class="card-img-overlay grad">
-            <h6 class="card-title" style="margin-top:8.5rem;">habijabiongabonga</h6>
-          </div>
-        </div>
-        <div class="card bg-dark text-white others">
-          <img src="../../../assets/images/s2.JPG" class="card-img" alt="...">
-          <div class="card-img-overlay grad">
-            <h6 class="card-title" style="margin-top:8.5rem;">quakka</h6>
-          </div>
-        </div>
-        <div class="card bg-dark text-white others">
-          <img src="../../../assets/images/s3.png" class="card-img" alt="...">
-          <div class="card-img-overlay grad">
-            <h6 class="card-title" style="margin-top:8.5rem;">Tasmia Zerin</h6>
-          </div>
-        </div>
-        <div class="card bg-dark text-white others">
-          <img src="../../../assets/images/s4.png" class="card-img" alt="...">
-          <div class="card-img-overlay grad">
-            <h6 class="card-title" style="margin-top:8.5rem;">Sad Kiddo</h6>
-          </div>
-        </div>
-        <div class="card bg-dark text-white others">
-          <img src="../../../assets/images/s5.png" class="card-img" alt="...">
-          <div class="card-img-overlay grad">
-            <h6 class="card-title" style="margin-top:8.5rem;">Pippo</h6>
-          </div>
-        </div>
-        <div class="next-arrow">
-          <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-arrow-right-circle-fill" viewBox="0 0 16 16">
-            <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z"/>
-          </svg>
+    <div *ngFor="let story of fetchedStories">
+      <div class="card bg-dark text-white others">
+        <img src={{story.storyUUID}} class="card-img" alt="...">
+        <div class="card-img-overlay grad">
+          <h6 class="card-title" style="margin-top:8.5rem;">{{story.name}}</h6>
         </div>
       </div>
-      <div class="posts">
-        <div class="singlePost" *ngFor="let status of fetchedStatuses">
-          <div class="card text-white single-post">
-            <div class="card-body">
-              <div class="propic-name">
-                <img src="../../../assets/images/fbRound.jpg" class="pro-pic" alt="...">
-                <div class="nameTime">
-                  <h5 class="card-title name">{{status.name}}</h5>
-                  <h6 class="time" style="font-size: 13px; color: #c2c2c2;">{{status.time}}</h6>
-                </div>
-              </div>
-              <p class="card-text" style="color: white;">{{status.content}}</p>
+    </div>
+    <div class="next-arrow">
+      <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="white" class="bi bi-arrow-right-circle-fill"
+        viewBox="0 0 16 16">
+        <path
+          d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
+      </svg>
+    </div>
+  </div>
+  <div class="posts">
+    <div class="singlePost" *ngFor="let status of fetchedStatuses">
+      <div class="card text-white single-post">
+        <div class="card-body">
+          <div class="propic-name">
+            <img src="../../../assets/images/fbRound.jpg" class="pro-pic" alt="...">
+            <div class="nameTime">
+              <h5 class="card-title name">{{status.name}}</h5>
+              <h6 class="time" style="font-size: 13px; color: #c2c2c2;">{{status.time}}</h6>
             </div>
           </div>
+          <p class="card-text" style="color: white;">{{status.content}}</p>
         </div>
-        <button class="logout" (click)="logout()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#2e4b88" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
-            <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
-          </svg>
-        </button>
+      </div>
     </div>
+    <button class="logout" (click)="logout()">
+      <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#2e4b88" class="bi bi-box-arrow-right"
+        viewBox="0 0 16 16">
+        <path fill-rule="evenodd"
+          d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
+        <path fill-rule="evenodd"
+          d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
+      </svg>
+    </button>
+  </div>
