--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="white-head">
   <img src="../../../assets/images/miniFB_transparent.svg" id="fbLogo">
   <img src="../../../assets/images/s6.png" class="propic-self">
+  <h5 class="name-self">{{username}}</h5>
 </div>
 <div class="container">
   <div class="write-post">
