--- a/frontend/src/app/components/home/home.component.css
+++ b/frontend/src/app/components/home/home.component.css
@@ -231,7 +231,7 @@ h2 {
 
 .stories::-webkit-scrollbar {
     width: 15px;
-    height: 5px;
+    height: 7px;
 }
 
 .stories::-webkit-scrollbar-track {
@@ -251,7 +251,7 @@ img[src=""] {
 
 .friends {
     color: white;
-    margin-top: 15%;
+    margin-top: 7%;
     margin-left: -100px;
 }
 
@@ -288,16 +288,31 @@ img[src=""] {
 }
 
 .fullS{
-    width: 100rem;
     height: 100%;
+    width: 100%;
     z-index: 1;
     position: absolute;
+    background-color: #21386b;
+}
+
+
+.fullImage{
+    height: 100%;
+    width: 100%;
+    display: flex;
     align-items: center;
+    justify-content: center;
+}
+
+.fullStory{
+    display: block;
+    width: 60%;
     margin-left: auto;
     margin-right: auto;
 }
 
-.fullStory{
-    margin: 10% auto;
-    width: 50%;
+.closeButton{
+    margin: 10px 0 0 10px;
+    background: transparent;
+    border: none;
 }
