--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,13 +1,12 @@
 <div [hidden]="fullHidden" class="fullS">
-  <div class="img-close">
-  <img class="fullStory" src="../../../assets/images/s6.png">
-  <button>
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+  <button class="closeButton" (click)="close()">
+    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#ffffff" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293 5.354 4.646z"/>
   </svg>
   </button>
-</div>
-  
+  <div class="fullImage">
+    <img class="fullStory" [src]="fullImage">
+  </div>
 </div>
 <div class="white-head">
   <img src="../../../assets/images/miniFB_transparent.svg" id="fbLogo">
@@ -45,7 +44,7 @@
       </div>
     </div>
     <div *ngFor="let story of fetchedStories">
-      <div class="card bg-dark text-white others">
+      <div class="card bg-dark text-white others" (click)="showFullImage(story)">
         <img src={{story.storyUUID}} class="card-img" alt="...">
         <div class="card-img-overlay grad">
           <h6 class="card-title" style="margin-top:8.5rem;">{{story.name}}</h6>
